<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_weight="@integer/welcome_to_weight"
        android:gravity="bottom"
        android:text="@string/welcome_to"
        android:textAlignment="center"
        android:textColor="@color/badgeTextColor"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="@integer/tracs_beta_image_weight"
        android:orientation="horizontal"
        android:weightSum="@integer/tracs_beta_image_container">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="@integer/tracs_beta_image_space_weight" />

        <ImageView
            android:id="@+id/tracs_about_logo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="@integer/tracs_beta_image_horiz_weight"
            android:adjustViewBounds="true"
            android:contentDescription="@string/tracs_beta_app"
            android:scaleType="centerCrop"
            android:src="@drawable/tracs_about" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="@integer/tracs_beta_image_space_weight" />

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="@integer/tracs_feature_list_title_weight"
        android:gravity="center"
        android:text="@string/feature_intro"
        android:textAllCaps="true"
        android:textColor="@color/badgeTextColor"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="@integer/feature_list_weight"
        android:weightSum="100">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="@integer/feature_list_space" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="@integer/feature_list_width"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="@integer/feature_list_item_height"
                android:orientation="horizontal">

                <com.joanzapata.iconify.widget.IconTextView
                    android:layout_width="@dimen/feature_icon_width"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/clock_icon"
                    android:textColor="@color/betaIconColor"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingStart="5dp"
                    android:text="@string/login_feature"
                    android:textColor="@color/badgeTextColor"
                    android:textSize="19sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="@integer/feature_list_item_height"
                android:orientation="horizontal">

                <com.joanzapata.iconify.widget.IconTextView
                    android:layout_width="@dimen/feature_icon_width"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/file_icon"
                    android:textColor="@color/betaIconColor"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingStart="5dp"
                    android:text="@string/document_feature"
                    android:textColor="@color/badgeTextColor"
                    android:textSize="19sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="@integer/feature_list_item_height"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="@dimen/feature_icon_width"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <com.joanzapata.iconify.widget.IconTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mobile_icon"
                        android:textColor="@color/betaIconColor"
                        android:textSize="34sp" />

                    <ImageView
                        android:id="@+id/horizontal_phone_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/horizontal_phone_description"
                        android:gravity="bottom"
                        android:rotation="90" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingStart="5dp"
                    android:text="@string/rotate_feature"
                    android:textColor="@color/badgeTextColor"
                    android:textSize="19sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="@integer/feature_list_item_height"
                android:orientation="horizontal">

                <com.joanzapata.iconify.widget.IconTextView
                    android:layout_width="@dimen/feature_icon_width"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/bell_icon"
                    android:textColor="@color/betaIconColor"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingStart="5dp"
                    android:text="@string/announcement_feature"
                    android:textColor="@color/badgeTextColor"
                    android:textSize="19sp" />
            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="@integer/feature_list_space" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="@integer/tracs_beta_text"
        android:gravity="center_vertical"
        android:paddingBottom="10dp"
        android:text="@string/beta_info"
        android:textAlignment="center"
        android:textColor="@color/badgeTextColor" />

</LinearLayout>